--- a/web.html
+++ b/web.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h1>Hola queridos estudiantes</h1>
-        <h2>Les recuerdo tomar el curso de git y Github</h2>
+        <h2>Les recuerdo tomar el curso de git y Github2</h2>
     </div>
 </body>
 </html>
